# backend/docs/swagger.yaml
@@ -47,8 +47,14 @@ definitions:
     properties:
       bookborrowID:
         type: integer
+      damagedPoint:
+        type: integer
+      damagedPointName:
+        type: string
       locationID:
         type: integer
+      lost:
+        type: string
       returnTime:
         type: string
       userID:
@@ -262,6 +268,15 @@ definitions:
     type: object
   ent.Bookreturn:
     properties:
+      DAMAGED_POINT:
+        description: DAMAGEDPOINT holds the value of the "DAMAGED_POINT" field.
+        type: integer
+      DAMAGED_POINTNAME:
+        description: DAMAGEDPOINTNAME holds the value of the "DAMAGED_POINTNAME" field.
+        type: string
+      LOST:
+        description: LOST holds the value of the "LOST" field.
+        type: string
       RETURN_TIME:
         description: RETURNTIME holds the value of the "RETURN_TIME" field.
         type: string
