# backend/ent/schema/bookreturn.go
@@ -1,6 +1,9 @@
 package schema
 
 import (
+	"errors"
+	"regexp"
+
 	"github.com/facebookincubator/ent"
 	"github.com/facebookincubator/ent/schema/edge"
 	"github.com/facebookincubator/ent/schema/field"
@@ -15,6 +18,21 @@ type Bookreturn struct {
 func (Bookreturn) Fields() []ent.Field {
 	return []ent.Field{
 		field.Time("RETURN_TIME"),
+		field.Int("DAMAGED_POINT").Range(0, 10),
+		field.String("DAMAGED_POINTNAME").Validate(func(s string) error {
+			match, _ := regexp.MatchString("^[a-zA-Z]+$", s)
+			if !match {
+				return errors.New("จุดที่เสียหายเป็นภาษาอังกฤษเท่านั้น เช่น TopFront,BottomBack")
+			}
+			return nil
+		}),
+		field.String("LOST").Validate(func(s string) error {
+			match, _ := regexp.MatchString("^[a-zA-Z]+$", s)
+			if !match {
+				return errors.New("ถ้าหายให้พิมพ์ lost ถ้าไม่พิมพ์ no")
+			}
+			return nil
+		}).MaxLen(5),
 	}
 }
 
